# radiomics-phantom

./: .gitattributes  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/: phantom_studio.py  studio_core.py
docs/: api.md  architecture.md  index.md  methodology.md
examples/: acquisition_sweep.py  render_phantom_slice.py  run_stability_atlas.py
paper/: README.md  build_pdf.py  make_figures.py  make_supplementary.py  medRxiv_submission_kit.md  radiomics-phantom_medRxiv.md
paper/figures/: results.json
paper/supplementary/: feature_inventory.csv  stability_atlas.csv
rphantom/: __init__.py  acquisition.py  features.py  normalize.py  phantom.py  stability.py
scripts/: fetch_ibsi_reference.py
tests/: __init__.py  ibsi_reference.py  test_acquisition.py  test_features.py  test_features_ibsi.py  test_features_morphology.py  test_features_zones.py  test_normalize.py  test_phantom.py  test_stability.py  test_studio_core.py
