[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rphantom"
version = "0.6.0"
description = "A physics-based stability atlas for IBSI radiomics features using synthetic digital phantoms."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Shuji Yamamoto", email = "yamamoto@lisit.jp" }]
keywords = ["radiomics", "IBSI", "phantom", "reproducibility", "medical imaging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

# Runtime dependencies are deliberately minimal. PyRadiomics is not used;
# MIRP / PySERA appear only as development-time reference oracles.
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-image>=0.21",
    "pingouin>=0.5",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
]
# Independent implementations used to cross-check the IBSI feature core in CI.
# Never a runtime dependency.
oracle = ["mirp>=2.2"]

[project.urls]
Homepage = "https://github.com/Institute-of-One/radiomics-phantom"
Issues = "https://github.com/Institute-of-One/radiomics-phantom/issues"

[tool.setuptools.packages.find]
include = ["rphantom*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
# Treat deprecations as errors to catch our own early, but never fail on
# deprecations raised inside the scientific stack, whose internals and release
# cadence we do not control (e.g. scikit-image's marching_cubes trips a NumPy
# 2.5 shape-setting deprecation).
filterwarnings = [
    "error::DeprecationWarning",
    "ignore::DeprecationWarning:skimage",
    "ignore::DeprecationWarning:numpy",
    "ignore::DeprecationWarning:scipy",
    "ignore::DeprecationWarning:pandas",
    "ignore::DeprecationWarning:pingouin",
    "ignore::DeprecationWarning:matplotlib",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "NPY", "D"]
# D203/D213: mutually exclusive docstring layouts (we use D211/D212).
# D401/D404: imperative-mood/wording checks that misfire on the descriptive
# attribute and property docstrings this codebase favours.
ignore = ["D203", "D213", "D401", "D404"]

[tool.ruff.lint.per-file-ignores]
# Re-exports declared in __all__ read as "unused" to F401.
"__init__.py" = ["F401"]
# Tests, apps and scripts don't need docstrings on every symbol.
"tests/*" = ["D100", "D101", "D102", "D103", "D104", "D105", "D107"]
"apps/*" = ["D100", "D101", "D102", "D103", "D104", "D105", "D107"]
"examples/*" = ["D100", "D103"]
"scripts/*" = ["D100", "D103"]
# Manuscript figure/PDF scripts: compact plotting code, no docstring requirement.
"paper/*" = ["D100", "D103", "E702"]

[tool.mypy]
# Analyse against 3.12 so mypy can parse recent numpy type stubs, which use PEP
# 695 `type` statements (rejected under an older target). Runtime compatibility
# with 3.10+ is verified by the test matrix, not by mypy.
python_version = "3.12"
strict = true
# numpy operations are typed as returning Any, so warn_return_any (part of
# strict) fires on almost every array-returning function. Disable just that one
# strict flag; the valuable checks (untyped defs, untyped calls) stay on.
warn_return_any = false

# The rest of the scientific stack ships no usable stubs; treat as untyped and
# do not follow into their source.
[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "skimage.*",
    "matplotlib.*",
    "pingouin.*",
    "tifffile.*",
]
ignore_missing_imports = true
follow_imports = "skip"
